--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon_r"
         android:supportsRtl="true"
         android:theme="@style/Theme.CoReserve">
+        <activity android:name=".Query"></activity>
         <activity android:name=".Quit" />
         <activity android:name=".CheckSheet" />
         <activity android:name=".LockUnlock" />
