【Query.kt,QueryConfirm.kt,MailService.kt】メール送信機能の実装。 【activity_query.xml,activity_query_confirm.xml】レイアウトの変更。 【dimens.xml】各種xmlファイル内の文字サイズをdimenに一括して格納 【string.xml】各種xmlファイルの文章をstringに一括して格納。 その他メソッドの整地やコメントの追記など

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@drawable/icon_r"
         android:supportsRtl="true"
         android:theme="@style/Theme.CoReserve">
-        <activity android:name=".Query"></activity>
+        <activity android:name=".QueryConfirm"></activity>
+        <activity android:name=".Query" />
         <activity android:name=".Quit" />
         <activity android:name=".CheckSheet" />
         <activity android:name=".LockUnlock" />
